feat: add aws s3 & google cloud storage destinations
