# packages/api/src/adapters/api/dto/destination.dto.ts
@@ -1,4 +1,10 @@
-import { IsBoolean, IsNotEmpty, IsString, Validate } from 'class-validator'
+import {
+  IsBoolean,
+  IsNotEmpty,
+  IsOptional,
+  IsString,
+  Validate,
+} from 'class-validator'
 import { FileFormatValidator } from './domain.dto'
 import { Components } from 'src/generated/typeDefinitions'
 
@@ -17,6 +23,76 @@ export class CreateCDNDestinationDto {
 
   @IsBoolean()
   includeEmptyTranslations: boolean
+}
+
+export class CreateAWSS3DestinationDto {
+  @IsString()
+  @IsNotEmpty()
+  revisionId: string
+
+  @IsString()
+  @IsNotEmpty()
+  name: string
+
+  @Validate(FileFormatValidator)
+  @IsNotEmpty()
+  fileFormat: Components.Schemas.FileFormat
+
+  @IsBoolean()
+  includeEmptyTranslations: boolean
+
+  @IsString()
+  @IsOptional()
+  objectsPrefix?: string
+
+  @IsString()
+  @IsNotEmpty()
+  awsRegion: string
+
+  @IsString()
+  @IsNotEmpty()
+  awsBucketId: string
+
+  @IsString()
+  @IsNotEmpty()
+  awsAccessKeyId: string
+
+  @IsString()
+  @IsNotEmpty()
+  awsSecretAccessKey: string
+}
+
+export class CreateGoogleCloudStorageDestinationDto {
+  @IsString()
+  @IsNotEmpty()
+  revisionId: string
+
+  @IsString()
+  @IsNotEmpty()
+  name: string
+
+  @Validate(FileFormatValidator)
+  @IsNotEmpty()
+  fileFormat: Components.Schemas.FileFormat
+
+  @IsBoolean()
+  includeEmptyTranslations: boolean
+
+  @IsString()
+  @IsOptional()
+  objectsPrefix?: string
+
+  @IsString()
+  @IsNotEmpty()
+  googleCloudProjectId: string
+
+  @IsString()
+  @IsNotEmpty()
+  googleCloudBucketId: string
+
+  @IsString()
+  @IsNotEmpty()
+  googleCloudServiceAccountKey: string
 }
 
 export class DeleteDestinationDto {
